Fix EZP-27288: Create button is not visible in dashboard title bar

--- a/Resources/public/css/theme/app.css
+++ b/Resources/public/css/theme/app.css
@@ -49,6 +49,7 @@ a {
 
 .ez-view-container {
     transition: opacity 0.2s ease-in-out;
+    position: relative;
 }
 
 .is-app-loading .ez-view-container {
